<resources>
    <!--General -->
    <string name="app_name">DesperadoAEYE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DesperadosAEye</string>
    <string name="nav_header_desc">DesparadosAEye</string>
    <string name="action_settings">Settings</string>

    <!-- Main Page -->
    <string name="menu_conversation">Conversation</string>
    <string name="menu_account_management">Account Management</string>
    <string name="menu_settings">Settings</string>

    <!-- Logon -->
    <string name="prompt_password">Enter Password&#8230;</string>
    <string name="prompt_email">Enter Email&#8230;</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_sign_in">Sign In</string>
    <string name="clipboard_label_message_content">message content</string>

    <string name="log_in_button">Log in</string>
    <string name="sign_up_button"><ul>Sign Up</ul> ||</string>
    <string name="sign_in_with_facebook_button">sign in with facebook</string>
    <string name="sign_in_with_google_button">sign in with google</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="forgot_password"><u>Forgot Password</u></string>

    <!-- Account Setup -->
    <string name="account_setup_first_name">First Name</string>
    <string name="account_setup_last_name">Last Name</string>
    <string name="account_setup_new_account_setup">New Account Setup</string>

    <!-- Conversation -->
    <string name="copy">copy</string>
    <string name="delete">delete</string>
    <string name="send">send</string>
    <string name="message_copied">message copied</string>
    <string name="message_deleted">message deleted</string>
    <string name="menu_account_setup">Account Setup</string>
    <string name="edit_personal_information">Edit Personal Information</string>
    <string name="change_password_string">New Password</string>
    <string name="save">Save</string>
    <string name="delete_account">Delete Account</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email">Email</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_change_password">changePassword</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_new_password">Enter new Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="verify">Verify</string>

</resources>