<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account_management.AccountManagementFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textViewAcountManagementTitle"
            android:text="@string/edit_personal_information"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>

        <EditText
            android:id="@+id/editTextTextPersonFirstName"
            android:text="@string/account_setup_first_name"
            android:autofillHints=""
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextTextPersonLastName"
            android:text="@string/account_setup_last_name"
            android:autofillHints=""
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textViewNewPassword"
            android:text="@string/change_password_string"
            android:textAlignment="center"
            android:layout_height="match_parent"
            android:layout_width="match_parent" />

        <EditText
            android:id="@+id/editTextNewPassword"
            android:inputType="textPassword"
            android:autofillHints=""
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/buttonSaveUserData"
            android:text="@string/save"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/buttonDeleteAccount"
            android:text="@string/delete_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"/>

    </LinearLayout>

</LinearLayout>