<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_conversation">

    <fragment
        android:id="@+id/nav_conversation"
        android:name="com.example.desparadosaeye.ui.conversation.ConversationFragment"
        android:label="@string/menu_conversation"
        tools:layout="@layout/fragment_conversation" >
        <action
            android:id="@+id/action_nav_conversation_to_accountSetup"
            app:destination="@id/nav_account_setup" />
        <action
            android:id="@+id/action_nav_conversation_to_nav_account_management"
            app:destination="@id/nav_account_management" />
        <action
            android:id="@+id/action_nav_conversation_to_nav_settings"
            app:destination="@id/nav_settings" />
    </fragment>

    <fragment
        android:id="@+id/nav_account_management"
        android:name="com.example.desparadosaeye.ui.account_management.AccountManagementFragment"
        android:label="@string/menu_account_management"
        tools:layout="@layout/fragment_account_management" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.desparadosaeye.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_account_setup"
        android:name="com.example.desparadosaeye.ui.accountSetup.AccountSetup"
        android:label="@string/menu_account_setup"
        tools:layout="@layout/account_setup_fragment" />
</navigation>