<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/loginLogoImageView"
            android:layout_width="141dp"
            android:layout_height="124dp"
            android:layout_gravity="center"
            android:fadingEdge="horizontal|vertical"
            android:foreground="@drawable/rounded_fg"
            app:srcCompat="@drawable/theme_icon"
            android:contentDescription="@string/nav_header_title" />
        <!-- Email Prompt Field-->


        <EditText
            android:id="@+id/TextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill"
            android:layout_marginTop="@dimen/login_fields_margin"/>

        <EditText
            android:id="@+id/TextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            tools:ignore="Autofill"
            android:layout_marginBottom="@dimen/login_fields_margin"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="@dimen/login_button"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/log_in_button"
                android:layout_margin="@dimen/login_button_margin"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="50dp"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextViewCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/login_button_margin"
                android:text="@string/sign_up_button"
                android:translationX="120dp"
                tools:ignore="ButtonStyle" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:translationX="120dp" />


        </LinearLayout>

    </LinearLayout>
</LinearLayout>